@@ -3,6 +3,7 @@ requests from users, including:
   Justin Allen
   Daniel Almirall
   Guiseppe Antonaci
+  Vincent Arel-Bundock
   Pedro Luis Baldoni
   Robert Baskin
   Asia Bento
